Add Traefik support

--- a/hosts.yml
+++ b/hosts.yml
@@ -10,7 +10,8 @@ all:
   children:
     secrets:
       hosts:
-        render-22.it.helsinki.fi: {}
+        render-22.it.helsinki.fi:
+          acme_email: "web-root@helsinki.fi"
 
     docker:
       hosts:
