--- a/hosts.yml
+++ b/hosts.yml
@@ -16,3 +16,7 @@ all:
     docker:
       hosts:
         render-22.it.helsinki.fi: {}
+
+    rendertron:
+      hosts:
+        render-22.it.helsinki.fi: {}
