--- a/install.yml
+++ b/install.yml
@@ -53,4 +53,8 @@
     - "traefik"
 
   # Rendertron
-  # @todo
+  - name: "rendertron"
+    when:
+    - "'docker' in group_names"
+    tags:
+    - "rendertron"
