Add prerender support

--- a/hosts.yml
+++ b/hosts.yml
@@ -5,7 +5,8 @@ all:
   vars:
     ansible_python_interpreter: "/usr/bin/python3"
   hosts:
-    render-22.it.helsinki.fi: {}
+    render-22.it.helsinki.fi:
+      prerender_hostname: "render.helsinki.fi"
 
   children:
     secrets:
@@ -14,6 +15,10 @@ all:
           acme_email: "web-root@helsinki.fi"
 
     docker:
+      hosts:
+        render-22.it.helsinki.fi: {}
+
+    prerender:
       hosts:
         render-22.it.helsinki.fi: {}
 
